# hexlet_pytest

./: .gitignore  pyproject.toml
hextel_pytest/: example.py
tests/: test_example.py
tests/fixtures/: forreverse.txt
