[tool.poetry]
name = "hextel-pytest"
version = "0.1.0"
description = ""
authors = ["Peter_007 <hihb3ya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
